--- a/src/app/components/body_text/body_text.module.css
+++ b/src/app/components/body_text/body_text.module.css
@@ -59,14 +59,18 @@
       border-radius: 0 15px 0 8px;
       font-size: 20px;
       background-color: rgb(165, 231, 35);
-      color: #6b4eff;
       font-weight: 700;
-      cursor: pointer;
-      
-  
+
   }
-  .cv:hover {
-    filter: invert(1)
+  .cv a {
+    text-decoration: none;
+    color: black;
+
+  }
+  
+  .cv:hover, .cv a:hover {
+    background-color: #6b4eff;
+    color: #a5e723;
   }
   .container_body {
       display: flex;
