--- a/src/app/components/header/header.module.css
+++ b/src/app/components/header/header.module.css
@@ -33,3 +33,10 @@
     color: #6b4eff;
     cursor: pointer;
 }
+.header a {
+    text-decoration: none;
+    font-weight:300;
+    color: white;
+    font-size: 17px;
+
+}
